--- a/v3/index.html
+++ b/v3/index.html
@@ -36,12 +36,12 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 <meta http-equiv="Content-type" content="text/html; charset=UTF-8"/>
 
 <!-- requirements for pytutor.js -->
-<script type="text/javascript" src="js/d3.v2.min.js"></script>
-<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="/javascript/d3/d3.min.js"></script>
+<script type="text/javascript" src="/javascript/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.ba-bbq.min.js"></script> <!-- for handling back button and URL hashes -->
 <script type="text/javascript" src="js/jquery.jsPlumb-1.3.10-all-min.js "></script> <!-- for rendering SVG connectors
                                                                                          DO NOT UPGRADE ABOVE 1.3.10 OR ELSE BREAKAGE WILL OCCUR -->
-<script type="text/javascript" src="js/jquery-ui-1.8.24.custom.min.js"></script> <!-- for sliders and other UI elements -->
+<script type="text/javascript" src="/javascript/jquery-ui/ui/jquery-ui.custom.min.js"></script> <!-- for sliders and other UI elements -->
 <link type="text/css" href="css/ui-lightness/jquery-ui-1.8.24.custom.css" rel="stylesheet" />
 
 <script type="text/javascript" src="js/pytutor.js"></script>
